--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,16 @@
-SRC := jhdl.cpp
-MODULES := ast vhdl
-CXXFLAGS = -std=c++11 -Wno-write-strings -g
-CXX := g++
--include $(patsubst %, %/module.mk, $(MODULES))
+SOURCE := $(shell find ./ -type f -iname '*.cpp' -print)
+CXXFLAGS := -std=c++11 -Wno-write-strings -g
+# CXX = g++
 
-OBJ := $(patsubst %.cpp, %.o, $(filter %.cpp, $(SRC)))
+# OBJ := $(patsubst %.cpp, %.o, $(filter %.cpp, $(SRC)))
+
+OBJ=jhdl.o
 
 all: jhdl
 
-jhdl: $(OBJ)
-	$(CXX) -o $@ $^ $(FLAGS)
+jhdl: $(SOURCE)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(FLAGS)
+
 
 print-%:
 	@echo '$*=$($*)'
@@ -17,5 +18,6 @@ print-%:
 .PHONY: clean
 
 clean:
+	rm jhdl
 	find . -name "*.o" -type f -delete
 
