--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,20 @@
-SOURCE := $(shell find ./ -type f -iname '*.cpp' -print)
-INCLUDE := $(shell find ./ -type f -iname '*.hpp' -print)
+DIRS := ast parser generator vhdl verilog
+SOURCE := $(shell find $(DIRS) -type f -iname '*.cpp' -print)
+INCLUDE := $(shell find $(DIRS) -type f -iname '*.hpp' -print)
 CXXFLAGS := -std=c++14 -g
 # CXX = g++
 
 # OBJ := $(patsubst %.cpp, %.o, $(filter %.cpp, $(SRC)))
 
-OBJ=jhdl.o
+OBJ=hdlc.o hdlf.o
 
-all: jhdl
+all: hdlc hdlf
 
-jhdl: $(SOURCE) $(INCLUDE)
-	$(CXX) $(CXXFLAGS) -o $@ $^ $(FLAGS)
+hdlc: $(SOURCE) $(INCLUDE)
+	$(CXX) $(CXXFLAGS) -o $@ $^ hdlc.cpp $(FLAGS)
 
+hdlf: $(SOURCE) $(INCLUDE)
+	$(CXX) $(CXXFLAGS) -o $@ $^ hdlf.cpp $(FLAGS)
 
 print-%:
 	@echo '$*=$($*)'
