Improved compile time

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,6 @@
 DIRS := ast parser generator vhdl verilog
+MAKEFILES := $(shell find $(DIRS) -type f -iname 'Makefile' -print)
+SUBDIRS := $(patsubst %/Makefile, %, $(MAKEFILES))
 SOURCE := $(shell find $(DIRS) -type f -iname '*.cpp' -print)
 INCLUDE := $(shell find $(DIRS) -type f -iname '*.hpp' -print)
 CXXFLAGS := -std=c++14 -g # -Wall -ansi
@@ -8,13 +10,18 @@ CXXFLAGS := -std=c++14 -g # -Wall -ansi
 
 OBJ=hdlc.o hdlf.o
 
-all: hdlc hdlf
+all: subdirs hdlc hdlf
+
+subdirs:
+	for m in $(SUBDIRS); do \
+	$(MAKE) -C $$m; \
+	done
 
 hdlc: $(SOURCE) $(INCLUDE)
-	$(CXX) $(CXXFLAGS) -o $@ $^ hdlc.cpp $(FLAGS)
+	$(CXX) $(CXXFLAGS) -o $@ $(shell find $(DIRS) -type f -iname '*.o' -print) hdlc.cpp $(FLAGS)
 
 hdlf: $(SOURCE) $(INCLUDE)
-	$(CXX) $(CXXFLAGS) -o $@ $^ hdlf.cpp $(FLAGS)
+	$(CXX) $(CXXFLAGS) -o $@ $(shell find $(DIRS) -type f -iname '*.o' -print) hdlf.cpp $(FLAGS)
 
 cppcheck:
 	cppcheck --quiet --enable=all ./
