--- a/src/vhdl/scanner/Makefile
+++ b/src/vhdl/scanner/Makefile
@@ -1,6 +1,7 @@
 SOURCE := $(wildcard *.cpp)
 OBJS := $(SOURCE:.cpp=.o)
-DEPS := $(wildcard *.c*)
+DEPS_DIRS := ./ ../../ast
+DEPS := $(shell find $(DEPS_DIRS) -type f -iname '*.h*' -print)
 CXXFLAGS := -std=c++14 -g # -Wall -ansi
 
 %.o: %.cpp $(DEPS)
