--- a/src/vhdl/scanner/Makefile
+++ b/src/vhdl/scanner/Makefile
@@ -3,12 +3,15 @@ OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
 CXXFLAGS := -std=c++14 -g -MMD # -Wall -ansi
 
+all: $(OBJS)
+
 %.o: %.cpp 
 	g++ $(CXXFLAGS) -c $< -o $@  
 
 -include $(DEPS)
 
-all: $(OBJS)
-
 clean:
 	find . -name "*.o" -type f -delete
+
+print-%:
+	@echo '$*=$($*)'
