--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-DIRS := ast parser exceptions generator vhdl verilog 
+DIRS := ast parser exceptions generator vhdl verilog debug output
 MAKEFILES := $(shell find $(DIRS) -type f -iname 'Makefile' -print)
 SUBDIRS := $(patsubst %/Makefile, %, $(MAKEFILES))
 SOURCE := $(shell find $(DIRS) -type f -iname '*.cpp' -print)
