--- a/src/kernel/lib/Makefile
+++ b/src/kernel/lib/Makefile
@@ -1,7 +1,7 @@
 SOURCE := $(wildcard *.cpp)
 OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
-CXXFLAGS := -std=c++14 -g -MMD -Wall # -fopenmp # -ansi
+CXXFLAGS := -std=c++14 -g -MMD -Wall -fopenmp # -ansi
 
 all: $(OBJS)
 
