--- a/src/templates/Makefile
+++ b/src/templates/Makefile
@@ -1,17 +1,28 @@
 SOURCE := $(wildcard *.cpp)
 OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
-CXXFLAGS := -std=c++14 -g -MMD -E # -Wall -ansi
+CXXFLAGS := -std=c++14 -g -MMD # -Wall -ansi
+INC_DIR := -I$(JHDL)/src/kernel/lib -I$(JHDL)/std
 
 all: $(OBJS)
 
-%.o: %.cpp 
-	g++ $(CXXFLAGS) -c $< -o $@  
+test.hpp: test.vhdl
+	$(JHDL)/src/hdlc.sh -f test.vhdl
+
+%.o: %.cpp test.hpp
+	g++ $(CXXFLAGS) -c $< -o $@ $(INC_DIR)
+
+simulate: %.o
+	$(JHDL)/src/hdls -f test.vhdl -d run.do 
+
 
 -include $(DEPS)
 
 clean:
+	rm test.hpp
+	rm test.cpp
 	find . -name "*.o" -type f -delete
+	find . -name "*.d" -type f -delete
 
 print-%:
 	@echo '$*=$($*)'
