Compile all VHDL files

--- a/ieee/Makefile
+++ b/ieee/Makefile
@@ -1,4 +1,7 @@
 SOURCE := $(wildcard *.cpp)
+VHDL_SOURCE := $(wildcard *.vhd)
+VHDL_HPP := $(VHDL_SOURCE:.vhd=.hpp)
+VHDL_CPP := $(VHDL_SOURCE:.vhd=.cpp)
 OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
 MAX_ERRORS := 5
@@ -6,17 +9,17 @@ CXXFLAGS := -std=c++14 -g -MMD -fmax-errors=$(MAX_ERRORS) # -Wall -ansi
 
 all: $(OBJS)
 
-std_logic_1164.hpp: std_logic_1164.vhd ../src/hdlc
-	../src/hdlc.sh -f std_logic_1164.vhd -l ieee -s 
+$(VHDL_HPP): $(VHDL_SOURCE) ../src/hdlc
+	../src/hdlc.sh -f $< -l ieee -s 
 
-%.o: %.cpp std_logic_1164.hpp 
+%.o: %.cpp $(VHDL_HPP) 
 	g++ $(CXXFLAGS) -c $< -o $@ -I../src/kernel/lib 
 
 -include $(DEPS)
 
 clean:
 	find . -name "*.o" -type f -delete
-	rm std_logic_1164.hpp std_logic_1164.cpp
+	rm $(VHDL_HPP) $(VHDL_CPP)
 
 print-%:
 	@echo '$*=$($*)'
