--- a/ieee/.gitignore
+++ b/ieee/.gitignore
@@ -19,3 +19,26 @@
 /numeric_bit.hpp
 /numeric_bit.cpp
 /numeric_bit.i
+/fixed_pkg_c.hpp
+/fixed_pkg_c.cpp
+/fixed_pkg_c.i
+/float_pkg_c.hpp
+/float_pkg_c.cpp
+/float_pkg_c.i
+/numeric_std.hpp
+/numeric_std.cpp
+/numeric_std.i
+/std_logic_signed.hpp
+/std_logic_signed.cpp
+/std_logic_signed.i
+/std_logic_unsigned.hpp
+/std_logic_unsigned.cpp
+/std_logic_unsigned.i
+/std_logic_textio.hpp
+/std_logic_textio.cpp
+/std_logic_textio.i
+
+
+
+
+
