--- a/std/Makefile
+++ b/std/Makefile
@@ -5,7 +5,7 @@ OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
 MAX_ERRORS := 5
 CXXFLAGS := -std=c++14 -g -MMD -fconcepts -fmax-errors=$(MAX_ERRORS) # -Wall -ansi
-INC_DIR := -I$(SYSTEMC)/include
+INC_DIR := -I$(SYSTEMC)/include -I. -I$(JHDL)/src/kernel/lib
 LIBS := -lsystemc
 INC := -L$(SYSTEMC)/lib-linux64
 
