--- a/src/kernel/lib/Makefile
+++ b/src/kernel/lib/Makefile
@@ -2,11 +2,13 @@ SOURCE := $(wildcard *.cpp)
 OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
 CXXFLAGS := -std=c++14 -g -fconcepts -MMD -O0 -Wall # -fopenmp # -ansi
+INC := -L$(SYSTEMC)/lib-linux64
+INC_DIR := -I$(SYSTEMC)/include 
 
 all: $(OBJS)
 
 %.o: %.cpp 
-	g++ $(CXXFLAGS) -c $< -o $@  
+	g++ $(CXXFLAGS) $(INC) $(INC_DIR) -c $< -o $@  
 
 -include $(DEPS)
 
