--- a/src/templates/Makefile
+++ b/src/templates/Makefile
@@ -9,7 +9,7 @@ SOURCE := $(wildcard *.cpp)
 OBJS := $(SOURCE:.cpp=.o)
 DEPS := $(OBJS:.o=.d)
 CXXFLAGS := -std=c++14 -g -fconcepts -MMD -O0 # -Wall -ansi
-INC_DIR := -I$(SYSTEMC)/include -I${JHDL}/src/kernel/lib -I${JHDL}/std -I. 
+INC_DIR := -I$(SYSTEMC)/include -I${JHDL}/src/kernel/lib -I${JHDL}/src/output -I${JHDL}/src/debug -I${JHDL}/std -I. 
 LIBS := -lsystemc
 INC := -L$(SYSTEMC)/lib-linux64
 
@@ -21,7 +21,7 @@ test.hpp: test.vhdl
 -include test.i
 
 %.o: %.cpp test.hpp
-	g++ $(CXXFLAGS) -c $< -o $@ $(INC_DIR) $(LIBS) $(INC) $(VHDL_INCLUDES)
+	g++ $(CXXFLAGS) -c $< -o $@ $(INC_DIR) $(LIBS) $(INC) $(VHDL_INCLUDES)  
 
 simulate: %.o
 	${JHDL}/src/hdls -f test.vhdl -d run.do 
