Added debug VHDL breakpoint procedure

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
-JHDL := $(shell pwd)
-DIRS := systemc src std src/kernel/lib lib 
+JHDL := $(shell pwd)/..
+DIRS := debug
 
 .PHONY: all test clean 
 
@@ -7,9 +7,6 @@ all:
 	for m in $(DIRS); do \
 	$(MAKE) JHDL=$(JHDL) -C $$m; \
 	done
-
-test:
-	cd testsuite; ./test.sh
 
 clean:
 	for m in $(DIRS); do \
