--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,10 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    # Install dependencies
+    - name: boost
+    run: sudo apt-get install -yq libboost-all-dev
+
     # Build 
     - name: Build
       run: make
