--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: boost
-    run: sudo apt-get install -yq libboost-all-dev
+    - name: Install boost
+      run: sudo apt-get install -yq libboost-all-dev
 
     # Build 
     - name: Build
