--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
     branches: [ master ]
 
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
