--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -1,2 +1,3 @@
 file(GLOB all_source_files_in_directory "*.cpp")
 add_library(lib_ast ${all_source_files_in_directory})
+target_link_libraries(lib_ast lib_exceptions)
