--- a/src/debug/CMakeLists.txt
+++ b/src/debug/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(lib_debug debug.cpp)
+file(GLOB all_source_files_in_directory "*.cpp")
+add_library(lib_debug ${all_source_files_in_directory})
