--- a/src/generator/expression/CMakeLists.txt
+++ b/src/generator/expression/CMakeLists.txt
@@ -1,2 +1,2 @@
 file(GLOB all_source_files_in_directory "*.cpp")
-add_library(lib_expression ${all_source_files_in_directory})
+add_library(lib_generator_expression ${all_source_files_in_directory})
